syntax = "proto3";

package auth;

message AuthResponse { string token = 1; }

message AuthRequest {
  string email = 1;
  string password = 2;
}

service AuthService {
  rpc Login(AuthRequest) returns (AuthResponse) {}
}